css/80_app.css
/* ... */
.header-block-close {
    display: flex;
    justify-content: flex-end;
}

/* Hide/Toggle collapsable sections (aka Disclosure)
------------------------------------------------------- */
.hide-toggle .icon.pre-text {
    vertical-align: text-top;
    width: 16px;
    height: 16px;
    margin-left: -3px;
}
[dir='rtl'] .hide-toggle .icon.pre-text {
    margin-left: 0;
    margin-right: -3px;
}

a:visited.hide-toggle,
a.hide-toggle {
    display: inline-block;
    font-size: 14px;
    font-weight: bold;
    padding-bottom: 5px;
}


/* Over Map
------------------------------------------------------- */
.over-map {
    position: absolute;
    left: 0;
    right: 0;
    top: 71px;
    bottom: 30px;
    pointer-events: none;
    display: flex;
    flex-direction: row-reverse;
    align-items: flex-end;
}
.over-map > * {
    pointer-events: auto;
}

/* Assistant
------------------------------------------------------- */
.assistant {
    flex: 0 0 auto;
    background: rgba(32, 29, 29, 0.9);
    color: #fff;
    border-radius: 4px;
    padding: 10px;
    display: flex;
    margin-bottom: 10px;
    max-width: 350px;

    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
    -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);

    -webkit-backdrop-filter: blur(2.5px);
    backdrop-filter: blur(2.5px);
}
.assistant .icon-col {
    flex: 0 0 auto;
}
.assistant .icon-col .icon {
    width: 30px;
    height: 30px;
    margin-right: 10px;
}
.assistant .mode-label {
    color: #ccc;
    text-transform: uppercase;
    letter-spacing: 0.7px;
    font-size: 10px;
    font-weight: bold;
    margin-bottom: -3px;
}
.assistant .subject-title {
    font-size: 13px;
    font-weight: bold;
}
.assistant .body-text {
    font-size: 12px;
    color: #ccc;
    line-height: 1.35em;
}
.assistant .body-text:empty {
    display: none;
}

/* Sidebar / Inspector
------------------------------------------------------- */
.sidebar-wrap {
    position: relative;
    height: 100%;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    flex: 0 0 auto;
    pointer-events: none;
    display: flex;
    flex-direction: column;
}
.sidebar-wrap > * {
    pointer-events: auto;
}
#sidebar {
    position: relative;
    height: 100%;
    z-index: 10;
    background: rgba(246, 246, 246, 0.98);
    -ms-user-select: element;
    border: 1px solid #ccc;
    border-radius: 6px;
    -webkit-backdrop-filter: blur(1.5px);
    backdrop-filter: blur(1.5px);
    -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.29);
    -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.29);
    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.29);
}
[dir='rtl'] .sidebar-wrap {
    padding-left: auto;
    padding-right: 10px;
}

#sidebar-resizer {
    position: absolute;
    top: 0;
    right: -6px;
    height: 100%;
    width: 6px;
    cursor: col-resize;
}
[dir='rtl'] #sidebar-resizer {
    right: auto;
    left: -6px;
}

#sidebar.collapsed #sidebar-resizer {
    /* make target wider to avoid the user accidentally resizing window */
    width: 10px;
    right: -10px;
}
[dir='rtl'] #sidebar.collapsed #sidebar-resizer {
    left: -10px;
}

.sidebar-component {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.sidebar-component .body {
    width: 100%;
    overflow: auto;
    top: 60px;
    bottom: 0;
    position: absolute;
}

.entity-editor-pane {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}
.entity-editor-pane .footer {
    position: relative;
}

.inspector-wrap {
    width: 100%;
    height: 100%;
}

.inspector-hidden {
    display: none;
}

.inspector-body {
    overflow-y: auto;
    overflow-x: visible;
    width: 100%;
    height: 100%;
}

.feature-list-pane .inspector-body,
.preset-list-pane .inspector-body {
    top: 120px;
}
.selection-list-pane .inspector-body {
    top: 60px;
}

.inspector-inner {
    padding: 20px 20px 5px 20px;
    position: relative;
}

#sidebar .search-header .icon {
    display: block;
    position: absolute;
    left: 10px;
    top: 80px;
    pointer-events: none;
}
[dir='rtl'] #sidebar .search-header .icon {
    left: auto;
    right: 10px;
}

#sidebar .search-header input {
    height: 60px;
    width: 100%;
    padding: 5px 10px;
    border-radius: 0;
    border-width: 0;
    border-bottom-width: 1px;
    text-indent: 30px;
    font-size: 18px;
    font-weight: bold;
}


/* Feature List / Search Results
------------------------------------------------------- */
.feature-list  {
    width: 100%;
}
.no-results-item,
.geocode-item,
.feature-list-item {
    width: 100%;
    position: relative;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
}

.geocode-item {
    width: 50%;
    background-color: #ccc;
    left: 25%;
    margin-top: 30px;
    border-radius: 2px;
}

[dir='rtl'] .geocode-item {
    left: -25%;
}

.geocode-item:hover {
    background-color: #aaa;
}

.feature-list-item {
    background-color: #fff;
    font-weight: bold;
    height: 40px;
    line-height: 20px;
}
.feature-list-item:hover {
    background-color: #ececec;
}
.feature-list-item button {
    background: transparent;
}
.feature-list-item .label {
    text-align: left;
    padding: 10px 10px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    border-left: 1px solid rgba(0, 0, 0, .1);
}
[dir='rtl'] .feature-list-item .label {
    text-align: right;
}

.feature-list-item .label .icon {
    opacity: .5;
}
.feature-list-item .close {
    float: right;
    padding: 10px;
}
.feature-list-item .close .icon {
    opacity: 1;
}
.feature-list-item .entity-type {
    color: #7092ff;
}
.feature-list-item:hover .entity-type {
    color: #597be7;
}
.feature-list-item .entity-name {
    font-weight: normal;
    color: #666;
    padding-left: 10px;
}
[dir='rtl'] .feature-list-item .entity-name {
    padding-left: 0;
    padding-right: 10px;
}
/* ... */

